--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emailjs/browser": "^4.4.1",
     "@fontsource/inter": "^5.1.1",
     "@fontsource/orbitron": "^5.1.1",
+    "axios": "^1.8.1",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
